--- a/views/user.ejs
+++ b/views/user.ejs
@@ -82,7 +82,7 @@
                         <div class="detail-item">
                             <p class="detail-content">Chức vụ : <span><%= view['VAITRO'] %></span></p>
                         </div>
-                        <a href="user/<%= isCheck %>/detail" class="detail-link">Chỉnh sửa</a>
+                        <a href="user/<%= isCheck %>/detail/role" class="detail-link">Chỉnh sửa</a>
                     </div>
                 </div>
             </div>
