--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -562,11 +562,12 @@ $color_primary_b: #08974b;
                                     
 
                                     .item {
-                                        width: 25%;
+                                        width: calc(100%/3);
                                         display: flex;
-                                        
+                                        flex-direction: column;
+                                        padding: 10px 0;
                                         label {
-                                            padding: 0 12px 0 6px;
+                                        
                                             cursor: pointer;
                                         }
 
