--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -189,13 +189,17 @@ $color_primary_b: #08974b;
         .sidebar {
             width: 22.5%;
             .item {
-                padding-bottom: 16px;
-                .title {
-                    font-size: 18px;
-                    color: #56AB2F;
-                    text-transform: uppercase;
-                    padding-bottom: 16px;
-                }
+                padding-bottom: 25px;
+                .header {
+                    height: 25px;
+                    display: inline-block;
+                    padding-bottom: 20px;
+                    .title {
+                        font-size: 18px;
+                        color: #56AB2F;
+                        text-transform: uppercase;
+                    }
+                }           
                 .menu-item {
                     padding: 8px 16px;
                     border: 1px solid #dfdfdf;
@@ -226,7 +230,7 @@ $color_primary_b: #08974b;
                             background-color: #A8E063;
                             top: 0;
                             left: -100%;
-                            transition: 0.2s;
+                            transition: 0.5s;
                             z-index: 0;
                         }
                         &:hover {
@@ -260,6 +264,7 @@ $color_primary_b: #08974b;
                             border: none;
                             cursor: pointer;
                             background-color: #A8E063;
+                            transition: 0.2s;
                             .fa {
                                 font-size: 18px;
                                 color: #fff;
@@ -267,8 +272,9 @@ $color_primary_b: #08974b;
                                 transition: 0.2s;
                             }
                             &:hover {
+                                background-color: #fff;
                                 .fa {
-                                    transform: scale(1.2);
+                                    color: #56AB2F;
                                 }
                             }
                         }
@@ -281,7 +287,96 @@ $color_primary_b: #08974b;
             padding-left: 20px;
             .item {
                 .header-body {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-end;
                     padding-bottom: 20px;
+                    .link-filter {
+                        position: relative;
+                        display: inline-block;
+                        width: 70px;
+                        margin-right: 12px;
+                        line-height: 25px;
+                        border: 1px solid #A8E063;
+                        overflow: hidden;
+                        text-align: center;
+                        height: 25px;
+                        color: #fff;
+                        border-radius: 5px;
+                        transition: 0.4s;
+                        p {
+                            position: relative;
+                            z-index: 1;
+                            color: #A8E063;
+                            transition: 0.2s;
+                        }
+                        &::after {
+                            position: absolute;
+                            content: '';
+                            display: block;
+                            background-color: #A8E063;
+                            height: 50px;
+                            width: 50px;
+                            left: -55%;
+                            top: 50%;
+                            transform: translate(-25%, -75%);
+                            transition: 0.6s;
+                            border-radius: 50%;
+                            z-index: 0;
+                        }
+                        &:hover {
+                            box-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 5px #49ff18, 0 0 10px #49FF18, 0 0 15px #49FF18;
+                            &::after {
+                                height: 150px;
+                                width: 150px;
+                            }
+                            p {
+                                color: #fff;
+                            }
+                        }
+                    }
+                    .link-next-page, .link-prev-page {
+                        display: inline-block;
+                        position: relative;
+                        width: 25px;
+                        height: 25px;
+                        color: #fff;
+                        background-color: #A8E063;
+                        border-radius: 50%;
+                        border: 1px solid #A8E063;
+                        text-align: center;
+                        line-height: 25px;
+                        margin-left: 6px;
+                        font-weight: bolder;
+                        font-size: 18px;
+                        transition: 0.4s;
+                        .fa {
+                            position: relative;
+                            z-index: 1;
+                        }
+                        &::after {
+                            z-index: 0;
+                            position: absolute;
+                            content: '';
+                            display: block;
+                            background-color: rgb(88, 61, 61);
+                            width: 0;
+                            height: 0;
+                            border-radius: 50%;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            transition: 0.2s;
+                        }
+                        &:hover {
+                            box-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 5px #49ff18, 0 0 10px #49FF18, 0 0 15px #49FF18;
+                            &::after {
+                                background-color: #56AB2F;
+                                width: 30px;
+                                height: 30px;
+                            }
+                        }
+                    }
                 }
                 .menu-item {
                     border-radius: 5px;
@@ -299,6 +394,7 @@ $color_primary_b: #08974b;
                             overflow: hidden;
                             border-radius: 15px;
                             transition: 0.2s;
+                            cursor: pointer;
                             .infor-1 {
                                 padding: 8px 12px 4px;
                                 color: #56AB2F;
@@ -319,6 +415,140 @@ $color_primary_b: #08974b;
                             }
                         }
                     }
+                }
+            }
+        }
+    }
+}
+
+.btn-link-back {
+    display: block;
+    width: 150px;
+    padding: 15px;
+    background-color: #A8E063;
+    color: #fff;
+    transition: 0.2s;
+    border-radius: 5px;
+    text-align: center;
+    margin: 20px auto;
+    &:hover {
+        background-color: #56AB2F;
+    }
+}
+// Page Bill Drug
+.box-item-detail {
+    box-shadow: 0 0 5px #000026;
+    width: 80%;
+    border: 1px solid #c9c9c9;
+    border-radius: 5px;
+    margin: 20px auto 0;
+    display: flex;
+    justify-content: space-between;
+    .menu-box-item {
+        width: 50%;
+        padding: 20px;
+        border-right: 1px solid #c9c9c9;
+        .header {
+            padding-bottom: 10px;
+            .title {
+                font-size: 18px;
+                color: #56AB2F;
+                text-transform: uppercase;
+                font-weight: bolder;
+            }
+        }
+        .menu-item-detail {
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            .link-item {
+                width: 100%;
+                height: 50px;
+                line-height: 50px;
+                border-radius: 5px;
+                background-color: #A8E063;
+                text-align: center;
+                padding: 0 1.5%;
+                margin: 0 1% 1%;
+                color: #fff;
+                font-size: 14px;
+                transition: 0.2s;
+                &:hover {
+                    box-shadow: 0 0 5px #000026;
+                    transform: translateY(-2px);
+                }
+            }
+        }
+    }
+    .form-box-detail {
+        width: 50%;
+        padding: 20px 20px 20px 0;
+        form {
+            .form-item {
+                    padding: 0 20px 16px;
+                .title-item {
+                    color: #56AB2F;
+                    padding-bottom: 4px;
+                }
+                input {
+                    padding: 8px;
+                    border: 1px solid #acacac;
+                    border-radius: 5px;
+                    width: 100%;
+                }
+                .detail {
+                    &:last-child {
+                        input {
+                            width: 100px;
+                        }
+                    }
+                    padding-bottom: 8px;
+                    .title-detail {
+                        color: #A8E063;
+                        font-size: 14px;
+                    }
+                    .unit {
+                        font-size: 10px;
+                        padding: 4px 0;
+                    }
+                }
+                .item-detail {
+                    padding-bottom: 8px;
+                    .title-item-detail {
+                        font-size: 14px;
+                        color: #A8E063;
+                    }
+                }
+                select {
+                    padding: 8px;
+                    border-radius: 5px;
+                    border: 1px solid #acacac;
+                    margin-top: 4px;
+                    width: 50%;
+                }
+                textarea {
+                    width: 100%;
+                    border-radius: 5px;
+                    border: 1px solid #acacac;
+                    padding: 8px;
+                }
+            }
+            button {
+                width: 150px;
+                display: block;
+                text-align: center;
+                padding: 12px;
+                border-radius: 5px;
+                border: none;
+                margin: 0 auto;
+                background-color: #A8E063;
+                color: #fff;
+                transition: 0.2s;
+                cursor: pointer;
+                font-size: 18px;
+                font-weight: bolder;
+                &:hover {
+                    background-color: #56AB2F;
                 }
             }
         }
@@ -1053,6 +1283,7 @@ $color_primary_b: #08974b;
     background-color: #fff;
     box-shadow: 1px 0px 5px #000026;
     z-index: 2;
+    top: 0;
 }
 
 .header-admin-fixed {
